style.css
*{
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

body{
  font-family: 'Oswald', sans-serif;

}
.logo-div,.nav-links{
  display: flex;
}

header{
  display: flex;
  
  margin: auto;
  background-color: grey;
  min-height: 8vh;
  align-items: center;
  padding: 1%;
  width: 100%;
  overflow: auto;
}
.logo{
  font-weight: 400;
 text-transform: uppercase;
 letter-spacing: 2px;
  color: white;
  

}
.nav-links{
  justify-content: space-around;
  list-style: none;
  width: 2%;
  letter-spacing: 1px;
  font-size: 14px;
}
.nav-link{
  color: black;
  text-decoration: none;
  width: 1%;
  
}
.logo-div{
flex: 2;
}
nav{
  
  display: flex;
  align-items: center;
  flex: 1;
  padding: 1%; 
}
@media screen and (max-width: 500px) {
  header {
    float: none;
    display: block;
  }
}

